# myfetch

./: .gitignore  README.md  curl-install.sh  diag_net.py  install.sh  myfetch.py  pyproject.toml  setup.py  uninstall.sh
myfetch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/core/: formatter.py  scanner.py
src/modules/: hardware.py  performance.py  security.py
